# amplemarket-test

./: .gitignore  Data_Science_Challenge_Data - Sheet1.csv  Dockerfile  Makefile  README.md  entrypoint.py  pyproject.toml  requirements.txt
saved_models/: svm_model_latest.pkl  word2vec_model_latest.pkl
src/: api.py  src.ipynb
src/cli/: __init__.py
src/cli/commands/: task.py
src/tasks/: __init__.py  registry.py
src/tasks/predictor/: task.py
src/tasks/preprocessor/: task.py
