[tool.poetry]
authors = ["Filipe Marques"]
description = ""
name = "test"
repository = "https://github.com/MrTrickPT/amplemarket-test"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
expandvars = "0.9.0"
pydantic = "^1.9.0"
requests = "^2.31.0"
pandas = "^2.2.0"
flask = "^3.0.1"
joblib = "^1.3.2"
nltk = "^3.8.1"
numpy = "^1.26.3"
scikit-learn = "1.4.0"
keras = "*"
gensim = "^4.3.2"
pyarrow = "*"
black = "*"
tensorflow = "*"

[tool.black]
extend-exclude = "notebooks"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
